Hijacker: many improvements (read more) * Improved tests * Changed default settings * Replaced MDK3 with MDK4 * Fixed some TLS alignment issues